[tool.poetry]
name = "radial"
version = "0.1.0"
description = "An intiutive interface for your requests in seconds"
authors = ["Shiv <hello@shivs.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
