[tool.poetry]
name = "radial"
version = "0.1.0"
description = "The next-gen HTTP client library for Python"
authors = ["Shiv <hello@shivs.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
aiohttp = "^3.8.3"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.20.1"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
